[package]
name = "atlas-communication"
version = "0.1.0"
edition = "2021"
description = "A communication layer for the Atlas framework"
authors = ["Nuno Neto <nuno.martingo@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/febft"
repository = "https://github.com/nuno1212s/febft"
documentation = "https://docs.rs/febft"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde", "bincode", "serde_bytes", "atlas-common/serialize_serde"]
serialize_capnp = ["atlas-capnp", "capnp"]

default = ["serialize_serde"]

[dependencies]
atlas-common = { path = "../atlas-common" }
atlas-capnp = { path = "../atlas-capnp", optional = true }
atlas-metrics = { path = "../atlas-metrics" }

capnp = { version = "0.16.0", optional = true }
bytes = "1.4.0"
serde = { version = "*", features = ["rc"], optional = true }
serde_bytes = { version = "*", optional = true }
bincode = { version = "^2.0.0-rc.2", optional = true, features = ["serde"] }
tokio-rustls = "0.24.0"
dashmap = "5.4.0"
either = "1.8.1"
futures = "0.3.26"
futures-timer = "3.0.2"
intmap = "2.0.0"
log = "0.4.17"
rustls = "0.21.0"
smallvec = "1.10.0"
fastrand = "1.9.0"
chrono = "0.4.23"
mio = { version = "0.8.6", features = ["os-poll", "net"] }
slab = "0.4.8"
crossbeam-skiplist = "0.1.1"

[dev-dependencies]
rustls-pemfile = "1.0.2"
env_logger = "0.10.0"