[package]
name = "atlas-communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["atlas-common/serialize_serde"]
serialize_capnp = []

default = ["serialize_serde"]

[dependencies]

atlas-common = { path = "../Atlas-Common" }
atlas-metrics = { path = "../Atlas-Metrics" }

anyhow = "1.0"
thiserror = "1.0"
bytes = "1"
log = "0.4"
strum = "0.25"
getset = "0.1.2"
either = "1.9.0"
smallvec = "1"

fastrand = "2.0.1"
enum-map = "3.0.0-beta.2"
chrono = "0.4"

futures = "0.3.26"
futures-timer = "3.0.2"

serde = { version = "*", features = ["rc"] }
serde_bytes = { version = "*" }
bincode = { version = "^2.0.0-rc.3", features = ["serde"] }